--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     h2 { text-align: center; color: #E5007E; }
     .card { background: white; padding: 15px; border-radius: 8px; max-width: 400px; margin: auto; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
     label { display: block; margin-top: 10px; font-weight: bold; }
-    input { width: 100%; padding: 8px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc; }
-    button { width: 100%; padding: 12px; background: #E5007E; color: white; border: none; border-radius: 4px; font-size: 16px; margin-top: 15px; }
+    input { width: 95%; padding: 8px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc; }
+    button { width: 95%; padding: 12px; background: #E5007E; color: white; border: none; border-radius: 4px; font-size: 16px; margin-top: 15px; }
     .result { background: #eaf1fb; padding: 10px; margin-top: 10px; border-radius: 4px; font-weight: bold; }
     #splash { position: fixed; top: 0; left: 0; width: 100%; height: 100%;
               background: white; display: flex; flex-direction: column;
@@ -39,18 +39,18 @@
 <h2>Cotizador de Impresión</h2>
 <div class="card">
     <label>Precio por m² ($):</label>
-    <input type="number" id="precioM2" value="9000">
+    <input type="number" id="precioM2" value="9000" onchange="calcular()">
 
     <label>Ancho (m):</label>
-    <input type="number" id="ancho" value="1" step="0.01">
+    <input type="number" id="ancho" value="1" step="0.01" onchange="calcular()">
 
     <label>Alto (m):</label>
-    <input type="number" id="alto" value="1" step="0.01">
+    <input type="number" id="alto" value="1" step="0.01" onchange="calcular()">
 
     <label>Servicio de diseño ($):</label>
-    <input type="number" id="precioDiseno" value="10000">
+    <input type="number" id="precioDiseno" value="10000" onchange="calcular()">
 
-    <label><input type="checkbox" id="incluyeDiseno"> Incluir servicio de diseño</label>
+    <label><input type="checkbox" id="incluyeDiseno" onchange="calcular()"> Incluir servicio de diseño</label>
 
     <button onclick="calcular()">Calcular</button>
     <div class="result" id="resultado"></div>
