--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: #f5f5f5; }
     h2 { text-align: center; color: #E5007E; }
     .card { background: white; padding: 15px; border-radius: 8px; max-width: 400px; margin: auto; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    label { display: block; margin-top: 10px; font-weight: bold; }
     input { width: 95%; padding: 8px; margin-top: 5px; border-radius: 4px; border: 1px solid #ccc; }
     button { width: 100%; padding: 12px; background: #E5007E; color: white; border: none; border-radius: 4px; font-size: 16px; margin-top: 15px; }
     .result { background: #eaf1fb; padding: 10px; margin-top: 10px; border-radius: 4px; font-weight: bold; }
@@ -25,6 +24,8 @@
     #splash img { width: 150px; height: 150px; margin-bottom: 15px; }
     #splash h1 { color: #E5007E; font-size: 26px; margin: 0; }
     #splash p { color: #555; font-size: 16px; margin-top: 5px; }
+    .checkbox-container{ display: inline-flex; align-items: center;}
+    label { vertical-align: middle; margin-top: 10px; font-weight: bold;}
 </style>
 </head>
 <body>
@@ -50,8 +51,14 @@
     <label>Servicio de diseño ($):</label>
     <input type="number" id="precioDiseno" value="10000" onchange="calcular()">
 
-    <label><input type="checkbox" id="incluyeDiseno" onchange="calcular()"> Incluir servicio de diseño</label>
-
+    <label>Descuento ($):</label>
+    <input type="number" id="precioDiseno" value="10000" onchange="calcular()">
+    
+    <div class="checkbox-container">
+      <input type="checkbox" id="incluyeDiseno" onchange="calcular()">
+      <label> Incluir servicio de diseño</label>
+    </div>
+    
     <button onclick="calcular()">Calcular</button>
     <div class="result" id="resultado"></div>
 </div>
