--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               justify-content: center; align-items: center; z-index: 9999; }
     #splash img { width: 150px; height: 150px; margin-bottom: 15px; }
     #splash h1 { color: #E5007E; font-size: 26px; margin: 0; }
-    #splash p { color: #555; font-size: 16px; margin-top: 5px; width: 100%;}
-    .checkbox-container{ display: inline-flex; align-items: center; }
+    #splash p { color: #555; font-size: 16px; margin-top: 5px;}
+    .checkbox-container{ display: inline-flex; align-items: center; width: 100%; }
     #incluyeDiseno{width: 30px;}
     label { vertical-align: middle; margin-top: 10px; font-weight: bold;}
 </style>
