--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     #splash p { color: #555; font-size: 16px; margin-top: 5px;}
     .checkbox-container{ display: inline-flex; align-items: center; width: 100%;}
     #incluyeDiseno{width: 30px;}
-    .container-descuento{ width: 100%; margin-top:20px; border-top:1px solid #e3e3e3;}
+    .descuento-container{ width: 100%; margin-top:20px; border-top:1px solid #e3e3e3;}
     label { vertical-align: middle; margin-top: 10px; font-weight: bold;}
 </style>
 </head>
