--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     #splash p { color: #555; font-size: 16px; margin-top: 5px;}
     .checkbox-container{ display: inline-flex; align-items: center; width: 100%;}
     #incluyeDiseno{width: 30px;}
-    .descuento-container{ width: 100%; margin-top:20px; border-top:1px solid #e3e3e3;}
+    .descuento-container{ width: 100%; margin-top:10px; padding-top:10px; border-top:1px solid #e3e3e3;}
     label { vertical-align: middle; margin-top: 10px; font-weight: bold;}
 </style>
 </head>
@@ -56,7 +56,6 @@
       <input type="checkbox" id="incluyeDiseno" onchange="calcular()">
       <label> Incluir servicio de diseño</label>
     </div>
-    <hr>
     <div class="descuento-container">
         <label>Descuento ($):</label>
         <input type="number" id="precioDiseno" value="10000" onchange="calcular()">
